# kaggle_in_rust

./: Cargo.toml
data/titanic/: submission.csv
notebooks/: titanic_py.ipynb
src/: main.rs
